Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-5085

`posix_fadvise` is incorrectly used in traffic_logcat

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • None
    • Logging
    • None

    Description

      traffic_logcat is currently using posix_fadvise the exact opposite way it should be used. It's currently telling the kernel it doesn't need anything in this file and then immediately proceeds to read everything in the file anyways.

      Attachments

        Issue Links

          Activity

            People

              danobi Daniel Xu
              danobi Daniel Xu
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m