TS-5085 `posix_fadvise` is incorrectly used in traffic_logcat

`traffic_logcat` was not using `posix_fadvise` correctly. This
patch corrects the original poor usage as well as adds some more
`posix_fadvise` calls that should help with performance.